fixed bug that the color shift would reveal
that the label to arc line doesnt actually move. now its all hidden =)

--- a/app_layout/css/piechart.css
+++ b/app_layout/css/piechart.css
@@ -3,6 +3,7 @@ text.statTextBox
 	text-anchor: middle;
 	fill: black;
 	font-size: 20px;
+	pointer-events: none;
 }
 text.labelTextBox
 {
